--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "from huggingface_hub import InferenceClient\n",
         "\n",
-        "TOKEN = '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'\n",
+        "TOKEN = 'YOUR TOKEN'\n",
         "MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-32B'\n",
         "client = InferenceClient(MODEL, token=TOKEN)"
       ],
